css/main.css
/*#region page styling*/

.landing-page {
    /*background-color: #8cb9f0;*/
    background-image: url("../img/splash2.jpg");
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-color: #8cb9f0;
    background-repeat: no-repeat;
}

.landing-page div,
header {
    animation-name: homeContent;
    animation-duration: 2s;
}

.page {
    background-color: #8cb9f0;
}

.pageTitle {
    font-family: 'New Tegomin', serif;
    text-align: center;
    font-size: 72px;
    color: #162e2c;
}


/*#endregion*/

table {
    display: block;
    color: #162e2c;
    /* animation: 1s ease 0s slideInFromRight;*/
}

.imageCaption {
    color: #162e2c;
}


/*#region navMenu items*/

#navMenu {
    display: none;
    text-align: left;
    overflow: hidden;
    position: fixed;
    min-width: 25%;
    height: 100%;
    top: 0;
    /*bottom: 0;*/
    z-index: 1000;
}

#navItem {
    display: block;
    float: center;
    padding: 10px;
    padding-top: 12.5%;
    background-color: #ffffff;
    position: relative;
    color: #162e2c;
    text-align: center;
    font-size: 20px;
    font-family: 'Syne Mono', monospace;
    font-weight: bold;
    height: 20%;
    border-color: #162e2c;
    border-width: 5px;
    text-decoration: none;
}

#showNav {
    display: block;
    border: none;
    background-color: #FFF;
    text-align: right;
    position: relative;
    right: 0px;
    filter: invert(100%);
    z-index: 2000;
}


/*#endregion*/


/*#region class=content*/

.content p,
table {
    text-indent: 48px;
}

.content a {
    text-decoration: none;
    color: #166962;
}

.content img {
    padding: 10px;
    /*    animation: 1s ease 0s slideInFromRight;*/
    background-color: #000000;
    box-shadow: 0 4px 8px 0 #162e2c, 0 6px 20px 0 #162e2c;
}

.content {
    color: #162e2c;
    z-index: 100;
    font-size: 18px;
    animation-name: homeContent;
    animation-duration: 2s;
}

.contentAlign {
    padding-left: 5px;
}


/*#endregion*/


/*#region class=contentTable*/

.contentTable p,
table {
    text-indent: 48px;
}

.contentTable a {
    text-decoration: none;
    color: #166962;
}

.contentTable h2 {
    font-size: 18px;
}

.contentTable {
    color: #162e2c;
    z-index: 100;
    font-size: 18px;
    animation-name: homeContent;
    animation-duration: 2s;
    max-width: 75%;
    margin-left: auto;
    margin-right: auto;
    width: 512px;
}

#inputMsg1 {
    width: 100%
}

#inputMsg2 {
    width: 100%
}

#inputMsg3 {
    width: 100%
}

#inputMsg4 {
    width: 100%
}


/*#endregion*/


/*#region keyframes for home page*/

@keyframes homeContent {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@-moz-keyframes homeContent {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@-o-keyframes homeContent {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@-webkit-keyframes homeContent {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}


/*#endregion*/


/*#region keyframes for products page and Nav Menu for chrome, mozilla and safari*/

@keyframes slideInFromLeft {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(0);
    }
}

@keyframes slideInNav {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(0);
    }
}

@keyframes slideOutNav {
    0% {
        transform: translateX(0%);
    }
    100% {
        transform: translateX(-100%);
    }
}

@keyframes slideOutToLeft {
    0% {
        transform: translateX(0%);
    }
    100% {
        transform: translateX(-100%);
    }
}

@keyframes slideInFromRight {
    0% {
        transform: translateX(100%);
    }
    100% {
        transform: translateX(0%);
    }
}

@-webkit-keyframes slideInFromLeft {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(0);
    }
}

@-webkit-keyframes slideInNav {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(0);
    }
}

@-webkit-keyframes slideOutToLeft {
    0% {
        transform: translateX(0%);
    }
    100% {
        transform: translateX(-100%);
    }
}

@-webkit-keyframes slideInFromRight {
    0% {
        transform: translateX(100%);
    }
    100% {
        transform: translateX(0%);
    }
}

@-moz-keyframes slideInFromLeft {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(0);
    }
}

@-moz-keyframes slideInNav {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(0);
    }
}

@-moz-keyframes slideOutToLeft {
    0% {
        transform: translateX(0%);
    }
    100% {
        transform: translateX(-100%);
    }
}

@-moz-keyframes slideInFromRight {
    0% {
        transform: translateX(100%);
    }
    100% {
        transform: translateX(0%);
    }
}

@keyframes slideIn {
    0% {
        display: none;
    }
    100% {
        display: block;
    }
}


/*#endregion*/

.theFooter {
    padding-top: 5px;
    position: fixed;
    bottom: 0px;
    width: 100%;
    text-align: center;
    background-color: #83a9d8;
    font-size: 10px;
}

